# matrix-commander-ng

./: .gitignore  Cargo.toml  README.md  flake.nix  help.help.txt  help.manual.txt  help.usage.txt
.github/workflows/: pages.yml  release-by-label-linux.yml  release-by-label.yml  rust-by-gh.yml
equalizing/tests/: nixos-test.nix
scripts/: clean-local.sh  create-help-help.sh  create-help-manual.sh  create-help-usage.sh  generate-site.py  matrix-commander-ng-tui  update-2-help-manual.py
src/: emoji_verify.rs
tests/: test-devices.sh  test-get-display-name.sh  test-get-profile.sh  test-rooms.sh  test-send.sh  test-version.sh
