# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "matrix-commander-ng"
version = "1.0.0"
edition = "2021"
description = "CLI-based Matrix client for sending, receiving, and more — maintained fork of matrix-commander-rs"
readme = "README.md"
homepage = "https://github.com/longregen/matrix-commander-ng"
repository = "https://github.com/longregen/matrix-commander-ng"
license = "GPL-3.0-or-later"
keywords = ["Matrix", "cli", "command-line-tool", "tool", "messaging"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["todo.txt", ".*"]


[dependencies]
clap = { version = "4.5", features = [
    "derive",
    "color",
    "wrap_help",
    "unicode",
] }
chrono = "0.4"
colored = "3.0"
directories = "6.0"
futures-util = "0.3"
matrix-sdk = { version = "0.16", default-features = false, features = [
    "e2e-encryption",
    "automatic-room-key-forwarding",
    "markdown",
    "bundled-sqlite",
    "sso-login",
    "rustls-tls",
] }
matrix-sdk-base = "0.16"
mime = "0.3"
mime_guess = "2.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.45", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
emojis = "0.6"


[dev-dependencies]
# to perform tests on async functions
tokio-test = "0.4"

[[bin]]
name = "matrix-commander-ng"
path = "src/main.rs"


[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

# Fast CI builds: no optimizations, just compile and link
[profile.ci]
inherits = "dev"
strip = "symbols"

[profile.release-tiny]
inherits = "release"
opt-level = "s"
